src/main/kotlin/com/example/ggyunispring/error/EntityNotFoundException.kt
package com.example.ggyunispring.error

/**
 * created by Gyunny 2021/10/04
 */
class EntityNotFoundException() : RuntimeException() {
}